# vastai-mcp

./: README.md  SPEC.md  pyproject.toml
.github/workflows/: build.yml
docs/: index.html
src/vastai_mcp/: __init__.py  __main__.py  client.py  config.py  registry.py  server.py  tools.py
tests/: test_validation.py
